Added players number info to the events_live.php page.

--- a/style/admin.css
+++ b/style/admin.css
@@ -217,6 +217,11 @@ li.video_list_element
   min-width: 860px;
 }
 
+div.video_list_element 
+{
+  min-width: 860px;
+}
+
 li.video_list_element:hover
 {
     background-color: #3c78c3;
