Refactoring download button position and style.

--- a/style/admin.css
+++ b/style/admin.css
@@ -321,7 +321,8 @@ li div.video_loading
 
 li div.video_download
 {
-    margin-top: 0;
+    margin-top: 14px;
+    margin-left: 40px;
     margin-left: 10px;
     max-width: 200px;
     font-size: 0.9em;
