Added dataTables plugin to users.php page.

--- a/style/admin.css
+++ b/style/admin.css
@@ -1,6 +1,12 @@
 /* BOOTSTRAP CUSTOMIZATION */
 
-.table > tbody > thead > tr > th {
+.table > thead > tr > th {
+    background-color: #333;
+    color: #fff;
+    border-color: #fff;
+}
+
+.table > tbody > tr > th {
     background-color: #333;
     color: #fff;
     border-color: #fff;
