Added dataTables plugin to users.php page.

--- a/style/admin.css
+++ b/style/admin.css
@@ -1,6 +1,6 @@
 /* BOOTSTRAP CUSTOMIZATION */
 
-.table > thead > tr > th {
+.table.dataTable > thead > tr > th {
     background-color: #333;
     color: #fff;
     border-color: #fff;
