Changed table td css

--- a/style/admin.css
+++ b/style/admin.css
@@ -21,8 +21,11 @@
   color: #fff;
 }
 
+.table > tbody > tr.active > td {
+    color: #fff;
+}
 .table-hover > tbody > tr.active:hover > td {
-  color: #000;
+  color: #fff;
 }
 
 /**** NAV ELEMENT ****/
