Added buttons to view live play links.

--- a/style/admin.css
+++ b/style/admin.css
@@ -470,3 +470,10 @@ div.table_container {
     width: 100%;
     height: auto;
 }
+
+
+
+
+input[readonly].default-cursor {
+    cursor: default;
+}
