--- a/style/admin.css
+++ b/style/admin.css
@@ -347,7 +347,8 @@ div.player_iphone img.video_imgos
 
 a.play-button img.video_imgdevice:hover
 {
-  opacity: 0.5;
+  opacity: 0.4;
+  background: url('../images/playbutton.png') center center no-repeat;
 }
 
 #img_container {
@@ -358,8 +359,6 @@ a.play-button img.video_imgdevice:hover
 #img_container img.video_imgdevice:hover
 {
   opacity: 0.5;
-  width: 45px;
-  height: 45px;
 }
 #live_player_html5_img {
     z-index: 9;
@@ -368,11 +367,12 @@ a.play-button img.video_imgdevice:hover
 #playbutton_overlay {
     background: url('../images/playbutton.png') center center no-repeat;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 42px;
-    height: 42px;
-    margin: -15px 0 0 -15px;
+    top: 6%;
+    left: 7%;
+    width: 50px;
+    height: 50px;
+    opacity: 0.2;
+    margin: -4px 0 0 -6px;
     z-index: 10;
 }
 
