--- a/style/admin.css
+++ b/style/admin.css
@@ -345,10 +345,41 @@ div.player_iphone img.video_imgos
   margin: 4px;
 }
 
-a.play-button img.video_imgdevice:hover
+/*a.play-button img.video_imgdevice:hover
 {
   opacity: 0.2;
-  background: url('../images/playbutton.png') center center no-repeat;
+  background: url('../images/playbutton.png')  no-repeat;
+}*/
+
+#img_container {
+  position: relative;
+  width: 50%;
+}
+
+#playbutton_overlay {
+    background: url('../images/playbutton.png') center center no-repeat;
+/*    position: absolute;
+    top: 6%;
+    left: 7%;
+    width: 50px;
+    height: 50px;
+    opacity: 0.2;
+    margin: -4px 0 0 -6px;
+    z-index: 10;*/
+    
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+}
+
+#img_container:hover .playbutton_overlay {
+  opacity: 1;
 }
 
 /*#img_container {
@@ -363,18 +394,8 @@ a.play-button img.video_imgdevice:hover
 #live_player_html5_img {
     z-index: 9;
     border: none;
-}
-#playbutton_overlay {
-    background: url('../images/playbutton.png') center center no-repeat;
-    position: absolute;
-    top: 6%;
-    left: 7%;
-    width: 50px;
-    height: 50px;
-    opacity: 0.2;
-    margin: -4px 0 0 -6px;
-    z-index: 10;
 }*/
+
 
 /******************************/
 /* *** VIDEO LOADING CSS3 *** */
