--- a/style/admin.css
+++ b/style/admin.css
@@ -326,47 +326,32 @@ div.video_download label
 
 a.play-button
 {
-  width: 48px;
-  height: 48px;
+  width: 50px;
+  height: 50px;
 }
 
 a.play-button img.video_imgdevice, div.video_loading img.video_imgdevice
 {
-  width: 42px;
-  height: 42px;
+  width: 50px;
+  height: 50px;
   margin: 2px;
 }
 
-div.player_desktop img.video_imgos,
+/*div.player_desktop img.video_imgos,
 div.player_iphone img.video_imgos
 {
-  width: 32px;
-  height: 32px;
+  width: 42px;
+  height: 42px;
   margin: 4px;
-}
-
-/*a.play-button img.video_imgdevice:hover
-{
-  opacity: 0.2;
-  background: url('../images/playbutton.png')  no-repeat;
 }*/
 
-#img_container {
+.img_play_container {
   position: relative;
-/*  width: 50%;*/
+  display: inline-block;
 }
 
 .playbutton_overlay {
     background: url('../images/playbutton.png') center center no-repeat;
-/*    position: absolute;
-    top: 6%;
-    left: 7%;
-    width: 50px;
-    height: 50px;
-    opacity: 0.2;
-    margin: -4px 0 0 -6px;
-    z-index: 10;*/
-    
     position: absolute;
     top: 0;
     bottom: 0;
@@ -378,23 +363,9 @@ div.player_iphone img.video_imgos
     transition: .5s ease;
 }
 
-#img_container:hover .playbutton_overlay {
+.img_play_container:hover .playbutton_overlay {
   opacity: 1;
 }
-
-/*#img_container {
-    position: relative;
-    display: inline-block;
-    border: none;
-}
-#img_container img.video_imgdevice:hover
-{
-  opacity: 0.5;
-}
-#live_player_html5_img {
-    z-index: 9;
-    border: none;
-}*/
 
 
 /******************************/
