--- a/style/admin.css
+++ b/style/admin.css
@@ -373,6 +373,7 @@ div.player_smartphone img.video_imgos
     position: relative;
     height: 30px;
     margin-bottom: 10px;
+    border: 1px solid rgba(0, 0, 0, 1);
 }
 
 .progress-bar {
